// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChallengeContainer should match the snapshot 1`] = `
<article
  className="ChallengeContainer"
>
  <ul
    className="incomplete-ul"
  >
    <ConnectFunction
      data={
        Object {
          "id": "1234",
          "isCompleted": false,
          "message": "Clean the kitchen",
        }
      }
      deleteChallenge={[MockFunction]}
      key="1234"
      updateChallenge={[MockFunction]}
      viewType="list"
    />
    <ConnectFunction
      data={
        Object {
          "id": "1234",
          "isCompleted": false,
          "message": "Clean the kitchen",
        }
      }
      deleteChallenge={[MockFunction]}
      key="1234"
      updateChallenge={[MockFunction]}
      viewType="list"
    />
    <div />
  </ul>
  <form
    className="form-row"
    onSubmit={[Function]}
  >
    <input
      className="new-challenge-input"
      name="chalInput"
      onChange={[Function]}
      placeholder="+ Add new challenge..."
      value=""
    />
    <button
      className="add-challenge-btn"
      disabled={true}
      type="submit"
    >
      +
    </button>
  </form>
</article>
`;

exports[`ChallengeContainer should match the snapshot when type is complete 1`] = `
<article
  className="ChallengeContainer"
>
  <ul
    className="incomplete-ul"
  >
    <ConnectFunction
      data={
        Object {
          "id": "1234",
          "isCompleted": false,
          "message": "Clean the kitchen",
        }
      }
      key="1234"
    />
    <ConnectFunction
      data={
        Object {
          "id": "1234",
          "isCompleted": false,
          "message": "Clean the kitchen",
        }
      }
      key="1234"
    />
    <div />
  </ul>
  <form
    className="form-row"
    onSubmit={[Function]}
  >
    <input
      className="new-challenge-input"
      name="chalInput"
      onChange={[Function]}
      placeholder="+ Add new challenge..."
      value=""
    />
    <button
      className="add-challenge-btn"
      disabled={true}
      type="submit"
    >
      +
    </button>
  </form>
</article>
`;

exports[`ChallengeContainer should match the snapshot when type is form 1`] = `
<article
  className="ChallengeContainer"
>
  <ul
    className="incomplete-ul"
  >
    <ConnectFunction
      data={
        Object {
          "id": "1234",
          "isCompleted": false,
          "message": "Clean the kitchen",
        }
      }
      key="1234"
    />
    <ConnectFunction
      data={
        Object {
          "id": "1234",
          "isCompleted": false,
          "message": "Clean the kitchen",
        }
      }
      key="1234"
    />
    <div />
  </ul>
  <form
    className="form-row"
    onSubmit={[Function]}
  >
    <input
      className="new-challenge-input"
      name="chalInput"
      onChange={[Function]}
      placeholder="+ Add new challenge..."
      value=""
    />
    <button
      className="add-challenge-btn"
      disabled={true}
      type="submit"
    >
      +
    </button>
  </form>
</article>
`;
